--- a/TRAVELKASH/TRAVELKASH.html
+++ b/TRAVELKASH/TRAVELKASH.html
@@ -64,7 +64,7 @@
                       <img src="/w3images/team2.jpg" alt="Shahid" style="width:100%">
                       <div class="container">
                         <h3>Shahid zahoor</h3>
-                        <p class="w3-opacity">web developer</p>
+                        <p class="w3-opacity">web developer/photographer</p>
                         <p>Student of SSM college of engineering.</p>
                         <p><button class="button light-grey block"><i class="fa fa-envelope"></i> Contact</button></p>
                       </div>
